Trying to add medium

--- a/report/luther-jonas-steiner-rafael-report.html
+++ b/report/luther-jonas-steiner-rafael-report.html
@@ -41,11 +41,10 @@
 
     <h3> Adaptive Sampling with Pixel Variance Estimates </h3>
 
-<!--    <div class="twentytwenty-container">-->
-<!--        <img src="images/cbox64spp.png" alt="Original Render" class="img-responsive">-->
-<!--        <img src="images/cbox64sppVariance.png" alt="Variance Buffer" class="img-responsive">-->
-<!--        <img src="images/cbox64sppDenoised.png" alt="Denoised Render" class="img-responsive">-->
-<!--    </div> <br>-->
+    <div class="twentytwenty-container">
+        <img src="images/adaptiveSampling.png" alt="Output" class="img-responsive">
+        <img src="images/adaptiveSamplingSamples.png" alt="Sample Distribution" class="img-responsive">
+    </div> <br>
 
 
     <h2>Feature 2: Advanced Camera Model</h2>
